# fleet-management-fork

./: create-config-functions.sh  fms-blueprint-compose-hono.yaml
components/: Cargo.toml
components/fms-consumer/src/: main.rs
components/fms-forwarder/: Cargo.toml
components/fms-forwarder/src/: hono_publisher.rs  main.rs
components/hono-streamer-mqtt/: Cargo.toml
components/hono-streamer-mqtt/src/: main.rs
components/mqtt-transport/: Cargo.toml
components/mqtt-transport/src/: lib.rs  mqtt5_transport.rs  mqtt_connection.rs
components/mqtt-transport/src/mqtt5_transport/: uprotocol.rs
grafana/dashboards/: FMS-Fleet.json
